fixed close cart button

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
     <!-- cart -->
     <div class="cart-overlay">
         <div class="cart">
-            <span class="close-cart"></span>
-            <i class="fas fa-window-close"></i>
+            <span class="close-cart">
+                <i class="fas fa-window-close"></i>
+            </span>
             <h2>your cart</h2>
             <div class="cart-content">
                 <!-- cart item -->
