--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         </div>
     </div>
     <!-- end of cart -->
+    <!-- Contentful -->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <!-- app js -->
     <script src="app.js"></script>
 </body>
 
