--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <header class="hero">
         <div class="banner">
             <h1 class="banner-title">furniture collection</h1>
-            <button class="banner-btn">shop now</button>
+            <a href="#shop-products" class="banner-btn">shop now</a>
         </div>
     </header>
     <!-- end of hero -->
     <!-- products -->
-    <section class="products">
+    <section class="products" id="shop-products">
         <div class="section-title">
             <h2>our products</h2>
         </div>
